--- a/app/views/root/search.html.erb
+++ b/app/views/root/search.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'links' %>
-<h3>Wiadomości</h3>
+<h3>Messages</h3>
 
 <%= render :partial => 'messages', :locals => {:msg => @result.results} %>
 
