--- a/app/views/root/_links.html.erb
+++ b/app/views/root/_links.html.erb
@@ -1,3 +1,3 @@
-<%= link_to 'Strona główna', logged_path %> | <%= link_to 'Wyloguj się',  destroy_user_session_path, :method => :delete %>
+<%= link_to 'Main page', logged_path %> | <%= link_to 'Wyloguj się',  destroy_user_session_path, :method => :delete %>
 
 <%= render 'form' %>
